syntax = "proto3";
package client_credential;

option go_package = "nfxid/protos/gen/clients/client_credential;clientcredentialpb";

import "google/protobuf/timestamp.proto";

// 客户端凭证状态枚举
enum ClientsCredentialStatus {
  CLIENTS_CREDENTIAL_STATUS_UNSPECIFIED = 0;
  CLIENTS_CREDENTIAL_STATUS_ACTIVE = 1;    // 激活
  CLIENTS_CREDENTIAL_STATUS_EXPIRED = 2;   // 已过期
  CLIENTS_CREDENTIAL_STATUS_REVOKED = 3;   // 已撤销
  CLIENTS_CREDENTIAL_STATUS_ROTATING = 4;  // 轮换中
}

// 客户端凭证信息
message ClientCredential {
  string id = 1;                           // 凭证ID (UUID)
  string app_id = 2;                       // 应用ID (UUID)
  string client_id = 3;                    // 客户端ID (varchar(255))
  string secret_hash = 4;                  // 密钥哈希 (varchar(255))
  string hash_alg = 5;                     // 哈希算法 (varchar(50))
  ClientsCredentialStatus status = 6;      // 状态：active, expired, revoked, rotating
  google.protobuf.Timestamp created_at = 7;     // 创建时间
  optional google.protobuf.Timestamp rotated_at = 8; // 轮换时间
  optional google.protobuf.Timestamp expires_at = 9; // 过期时间
  optional google.protobuf.Timestamp last_used_at = 10; // 最后使用时间
  optional string created_by = 11;         // 创建者ID (UUID)
  optional google.protobuf.Timestamp revoked_at = 12;  // 撤销时间
  optional string revoked_by = 13;         // 撤销者ID (UUID)
  optional string revoke_reason = 14;      // 撤销原因 (text)
}

// ClientCredential 服务 - 供其他服务通过 gRPC 管理客户端凭证
service ClientCredentialService {
  // 根据ID获取客户端凭证
  rpc GetClientCredentialByID (GetClientCredentialByIDRequest) returns (GetClientCredentialByIDResponse);
  
  // 根据客户端ID获取客户端凭证
  rpc GetClientCredentialByClientID (GetClientCredentialByClientIDRequest) returns (GetClientCredentialByClientIDResponse);
  
  // 根据应用ID获取客户端凭证列表
  rpc GetClientCredentialsByAppID (GetClientCredentialsByAppIDRequest) returns (GetClientCredentialsByAppIDResponse);
}

// ClientCredential Service Messages
message GetClientCredentialByIDRequest {
  string id = 1;
}

message GetClientCredentialByIDResponse {
  ClientCredential client_credential = 1;
}

message GetClientCredentialByClientIDRequest {
  string client_id = 1;
}

message GetClientCredentialByClientIDResponse {
  ClientCredential client_credential = 1;
}

message GetClientCredentialsByAppIDRequest {
  string app_id = 1;
  optional ClientsCredentialStatus status = 2;
}

message GetClientCredentialsByAppIDResponse {
  repeated ClientCredential client_credentials = 1;
}
